--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .box{
   background-color: #000;
   width: 40rem;
-  height: 40rem;
+  height: 50rem;
 }
 
 .main {
@@ -15,7 +15,7 @@
   --vc:calc(clamp(0,var(--v),0.5) * var(--s) * var(--r)); 
   
   /*margin */
-  --mv: 0px; /* vertical */
+  --mv: 1px; /* vertical */
   --mh: calc(var(--mv) + (var(--s) - 2*var(--hc))/2); /* horizontal */
   /* for the float*/
   --f: calc(2*var(--s)*var(--r) + 4*var(--mv)  - 2*var(--vc) - 2px);
@@ -35,13 +35,13 @@
   margin-bottom: calc(var(--mv) - var(--vc)); 
 }
 .letters{
-  background-color: #ffffcd;
+  background: #ffffcd;
 }
 .green{
-  background-color: #038003;
+  background: #038003;
 }
 .red{
-  background-color: #ff0000;
+  background: #ff0000;
 }
 
 .container::before {
